--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
 			<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
 			<link rel="stylesheet" type="text/css" href="style.css">
 			<meta name=viewport content="width=device-width, initial-scale=1, user-scalable=no">
+			<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+			<script src="script.js"></script>
+
 </head>
 <body>
 
